tests/baselines/reference/systemModule9.errors.txt
tests/cases/compiler/systemModule9.ts(1,21): error TS2307: Cannot find module 'file1' or its corresponding type declarations.
tests/cases/compiler/systemModule9.ts(2,25): error TS2307: Cannot find module 'file2' or its corresponding type declarations.
tests/cases/compiler/systemModule9.ts(3,15): error TS2307: Cannot find module 'file3' or its corresponding type declarations.
tests/cases/compiler/systemModule9.ts(5,25): error TS2307: Cannot find module 'file5' or its corresponding type declarations.
tests/cases/compiler/systemModule9.ts(6,22): error TS2307: Cannot find module 'file6' or its corresponding type declarations.
tests/cases/compiler/systemModule9.ts(16,15): error TS2307: Cannot find module 'file7' or its corresponding type declarations.


==== tests/cases/compiler/systemModule9.ts (6 errors) ====
    import * as ns from 'file1';
                        ~~~~~~~
!!! error TS2307: Cannot find module 'file1' or its corresponding type declarations.
    import {a, b as c} from 'file2';
                            ~~~~~~~
!!! error TS2307: Cannot find module 'file2' or its corresponding type declarations.
    import d from 'file3'
                  ~~~~~~~
!!! error TS2307: Cannot find module 'file3' or its corresponding type declarations.
    import 'file4'
    import e, * as ns2 from 'file5';
                            ~~~~~~~
!!! error TS2307: Cannot find module 'file5' or its corresponding type declarations.
    import ns3 = require('file6');
                         ~~~~~~~
!!! error TS2307: Cannot find module 'file6' or its corresponding type declarations.
    
    ns.f();
    a();
    c();
    d();
    e();
    ns2.f();
    ns3.f();
    
    export * from 'file7';
                  ~~~~~~~
!!! error TS2307: Cannot find module 'file7' or its corresponding type declarations.
    
    var x, y = true;
    export {x};
    export {y as z};